loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:15: error: ')' expected but '(' found.
  if (getX():Int == posX && getY():Int == posY) {
                                ^LoopCourse:15: error: illegal start of simple expression
  if (getX():Int == posX && getY():Int == posY) {
                                  ^