loopfor.LoopCourse.scala.code
var tours:Int = 0
var posX:Int = getX():Int
var posY:Int = getY():Int

while (tours < 10) {
  
  while (!estFaceMur()){
    avance()
  }
  
  if (estFaceMur()) {
    gauche()
  }
  
  if (getX():Int == posX && getY():Int == posY) {
    tours += 1
  }
  
}